# cogl-wonderbar

./: .gitignore  Makefile  Makefile.am  TODO  autogen.sh  cone.ply  configure.ac  cube.c  mash-data.c  mash-data.h  sphere.ply
src/: Makefile.am  entity.c  entity.h  es-components.h  es-entity.c  es-entity.h  es-main.c  es-main.h  es-util.c  es-util.h  main.c  main.h  mash-data-loader.c  mash-data-loader.h  mash-ply-loader.c
src/components/: es-animation-clip.c  es-animation-clip.h  es-camera.c  es-camera.h  es-components.h  es-light.c  es-light.h  es-mesh-renderer.c  es-mesh-renderer.h
